# distributed-average-consensus

./: .travis.yml  CMakeLists.txt  NOTICE  README.md
cmake-modules/: ns3.cmake
notebook/: experiments.ipynb  iterative_avg_consensus_experiments.ipynb
src/: iterative_avg_consensus.cc  iterative_avg_consensus.h  sensor_app.cc  sensor_app.h  sensor_data.cc  sensor_data.h  utils.h
